<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <GVL Name="GVL" Id="{ae16aa83-5e48-4609-bd62-bae9f5908323}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
		stAxis_1 : AXIS_REF;
		stAxis_2 : AXIS_REF;
		stAxis_3 : AXIS_REF;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>